--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="/recipes/soup.html"> Soup Recipe </a>
+    <img src="/recipes/soupimg.jpeg" alt="image of soup" height="310" width="310"
 </body>
 </html>
