Fixed the path to the soup directory and soup image directory, so they are now visible to the user. The back button on the Soup Recipe page works

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/soup.html"> Soup Recipe </a>
-    <img src="/recipes/soupimg.jpeg" alt="image of soup" height="310" width="310"
+    <a href="/odin-recipes/recipes/soup.html"> Soup Recipe </a>
+    <img src="/odin-recipes/recipes/soupimg.jpeg" alt="image of soup" height="310" width="310">
+
 </body>
 </html>
