--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Back</a>
     <h1>Soup Recipe</h1>
-    <img src="/soupimg.jpeg" alt="image of soup" height="310" width="310">
+    <img src="/odin-recipes/recipes/soupimg.jpeg" alt="image of soup" height="310" width="310">
     <p>Description of the soup</p>
     <h3>Ingredients</h3>
     <ul>
